p2/confs/k3s/app1.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-one
