p2/confs/k3s/app2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-two
