p2/confs/k3s/app3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-three
